src/EjemploAA.jj
PARSER_BEGIN(EjemploAA)
import java.io.*;

public class EjemploAA {

	public static void main(String[] args) throws IOException {

		String LineaEntera = " ";

		FileReader f = new FileReader("Ejemplo.txt");
 		BufferedReader bf = new BufferedReader(f);
	    String Linea = bf.readLine();
	
	     	while(Linea != null) {
	
	           LineaEntera += Linea;
	           Linea = bf.readLine();
	
	        }
	 	
	 	 f.close();
		
			try{
			 
				new EjemploAA(new java.io.StringReader(LineaEntera)).S();
				System.out.println("La sintaxis es CORRECTA");
		
			}catch(Throwable e){
				System.out.println("Hay un ERROR en la sintaxis: "+ e.getMessage());
			}

		
	}
}

PARSER_END(EjemploAA)

SKIP: { " " | "\t" | "\n" | "\r" }
TOKEN: {
	
  <ARTICULO: "El"|"La">
| <SUJETO: (["A" - "Z"])+>
| <VERBO: (["a" - "z"])+>
| <NUMERO: (["0" - "9"])+ >

}

void S():	{} { type() (S())* <EOF> }
void type():	{} {<ARTICULO><SUJETO><VERBO><NUMERO>"vodkas,"}
